# autosesemenyek-advcrawler

./: .gitignore  FULLFEED.md  LICENSE  README.md  events-clusterized.json  events.json  new_events.json  pyproject.toml
.github/instructions/: design.instructions.md
.github/workflows/: crawl-autosesemenyek.yml  crawl-calendars.yml  crawl-event-feed.yml  crawl-sodi-test.yml  crawl.yml  ping-sites.yml
dedupe/: settings.dedupe
src/dedup_filter/: __init__.py  main.py
src/event_clusterizer/: common.py  main.py  process_command.py  train_command.py
src/event_crawler/: automagazin_crawler.py  autosesemenyek_downloader.py  autosnaptar_downloader.py  blackstar_crawler.py  crawler_base.py  downloader_base.py  euroring_crawler.py  lzgp_crawler.py  m_ring_crawler.py  main.py  oldtimer_downloader.py  parser_base.py  programturizmus_crawler.py  sodiwseries_crawler.py  youngtimers_crawler.py
src/feed_formatter/: main.py
src/ocr/: base_ocr.py
src/ocr/models/: __init__.py  text_ocr.py
src/utilities/: __init__.py  _trie_index.py  hu_town_matcher.py  text.py
src/utilities/hu-towns/: towns.txt
src/utilities/towns/: at-towns.txt  explicit-map.csv  hu-towns.txt  ro-towns.txt  rs-towns.txt  sk-towns.txt
