[tool.poetry]
name = "autosesemenyek-advcrawler"
version = "0.1.0"
description = "Calendar crawler for M-Ring and Euroring pages using Camoufox"
authors = ["Speeder <speeder@example.com>"]
readme = "README.md"
packages = [
    { include = "event_clusterizer", from = "src" },
    { include = "event_crawler", from = "src" },
    { include = "feed_formatter", from = "src" },
    { include = "dedup_filter", from = "src" },
    { include = "utilities", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
camoufox = "^0.4.11"
icalendar = "^7.0.3"
lingua-language-detector = "^2.2.0"
marisa-trie = "^1.2.1"
playwright-captcha = "^0.1.4"
dedupe = { version = "^3.0.3", optional = true }
dedupe-variable-datetime = { version="^2.0.0", optional = true }
paddleocr = { version = "^3.7.0", optional = true }
paddlepaddle = { version = ">=3.0", optional = true }

[tool.poetry.extras]
dedupe = ["dedupe", "dedupe-variable-datetime" ]
ocr = ["paddleocr", "paddlepaddle"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.8"

[tool.poetry.scripts]
crawl = "event_crawler.main:main"
mkfeed = "feed_formatter.main:main"
event-clusterizer = "event_clusterizer.main:main"
dedup-filter = "dedup_filter.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
